<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">食べRoid</string>
    <string name="api_key">96d24714e814675c7a8cd129c18608151cf2bf9b</string>
    <string name="button_large">1.5km</string>
    <string name="button_medium">600m</string>
    <string name="button_small">300m</string>
    <string name="button_search">検索</string>

    <string name="msg_notfound">条件に合致するお店はありませんでした</string>

    <string name="button_share_map">地図で見る</string>
    <string name="button_review_more">(続きを読む...)</string>
    <string name="label_search_gps">現在の位置情報で検索</string>
    <string name="label_search_station">最寄駅で検索</string>
    <string name="label_result">検索結果</string>
    <string name="label_footer">続きを見る</string>
    <string name="label_dataloading">データ取得中</string>
    <string name="label_restaurantname">店名</string>
    <string name="label_tabelogurl">URL</string>
    <string name="label_tabelogmobileurl">携帯URL</string>
    <string name="label_totalscore">総合評価</string>
    <string name="label_tastescore">味評価</string>
    <string name="label_servicescore">サービス評価</string>
    <string name="label_moodscore">雰囲気評価</string>
    <string name="label_situation">場面</string>
    <string name="label_dinnerprice">ディナー価格</string>
    <string name="label_lunchprice">ランチ価格</string>
    <string name="label_category">カテゴリ</string>
    <string name="label_station">最寄駅</string>
    <string name="label_address">住所</string>
    <string name="label_tel">Tel</string>
    <string name="label_businesshours">営業時間</string>
    <string name="label_holiday">休業日</string>
    <string name="label_latlon">座標</string>
    <string name="label_tab1">詳細</string>
    <string name="label_tab2">口コミ</string>
    <string name="label_tab3">地図</string>

    <string name="label_rv_nickname">投稿ユーザー名</string>
    <string name="label_rv_visitdate">レストラン訪問日</string>
    <string name="label_rv_reviewdate">口コミ投稿日</string>
    <string name="label_rv_usetype">口コミ対象</string>
    <string name="label_rv_situations">オススメシチュ</string>
    <string name="label_rv_totalscore">点数(総合評価)</string>
    <string name="label_rv_tastescore">料理・味の点数</string>
    <string name="label_rv_servicescore">サービスの点数</string>
    <string name="label_rv_moodscore">雰囲気の点数</string>
    <string name="label_rv_dinnerprice">使った金額/人(夜)</string>
    <string name="label_rv_lunchprice">使った金額/人(昼)</string>
    <string name="label_rv_title">口コミのタイトル</string>
    <string name="label_rv_comment">口コミのコメント</string>
    <string name="label_rv_pcsiteurl">口コミページ(PC)のURL</string>
    <string name="label_rv_mobilesiteurl">口コミページ(モバイル)のURL</string>

    <color name="bgcolor">#FFFFFF</color>
    <color name="header_bgcolor">#409040</color>
    <color name="header_color">#202020</color>
    <color name="row_bgcolor">#FFFFFF</color>
    <color name="text1_color">#000000</color>
    <color name="text2_color">#202020</color>
    <color name="text3_color">#0000FF</color>
</resources>