<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bgcolor">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
		android:layout_height="?android:attr/listPreferredItemHeight"
    	android:padding="6dip"
    	android:layout_gravity="center"
    	android:gravity="center">
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_marginRight="6dip"
			android:src="@drawable/icon" />
   	    <TextView
			android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:textSize="32sp"
   	        android:textColor="@color/header_color"
   	        android:text="@string/app_name" />
	</LinearLayout>

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/text1_color"
	    android:text="@string/label_search_gps" />
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
		android:layout_height="?android:attr/listPreferredItemHeight"
    	android:padding="6dip"
    	android:layout_gravity="center"
    	android:gravity="center">
		<Button
			android:id="@+id/button_search_gps_small"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_small"
	    	android:layout_gravity="center" />
		<Button
			android:id="@+id/button_search_gps_medium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_medium"
	    	android:layout_gravity="center" />
		<Button
			android:id="@+id/button_search_gps_large"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_large"
	    	android:layout_gravity="center" />
	</LinearLayout>
	<TextView
	    android:id="@+id/text_location"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/text1_color"
	    android:text="" />
	<TextView
	    android:id="@+id/text_provider"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/text1_color"
	    android:text="" />
	<TextView
	    android:id="@+id/text_status"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/text1_color"
	    android:text="" />
	<TextView
	    android:id="@+id/text_result"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/text1_color"
	    android:text="" />

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/text1_color"
	    android:text="@string/label_search_station" />
	<EditText
	    android:id="@+id/edittext_station"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:textColor="@color/text1_color"
	    android:text="" />
	<Button
		android:id="@+id/button_search_station"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_search"
    	android:layout_gravity="center" />
</LinearLayout>