<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:stretchColumns="1"
	android:shrinkColumns="1"
    android:background="@color/bgcolor">
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/label_rv_nickname"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	   	<TextView
			android:id="@+id/NickName"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/header_color" />
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/label_rv_visitdate"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	   	<TextView
			android:id="@+id/VisitDate"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/header_color" />
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/label_rv_reviewdate"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	   	<TextView
			android:id="@+id/ReviewDate"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/header_color" />
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/label_rv_usetype"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	   	<TextView
			android:id="@+id/UseType"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/header_color" />
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/label_rv_situations"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	   	<TextView
			android:id="@+id/Situations"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/header_color" />
	</TableRow>


	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/label_rv_totalscore"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1">
				<ImageView
					android:id="@+id/TotalScoreStar"
					android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
					android:layout_marginRight="6dip"
			    	android:src="@drawable/star_back"/>
			    <TextView
					android:id="@+id/TotalScore"
					android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
					android:layout_weight="1"
			        android:textColor="@color/header_color"
			        android:textSize="12sp"
					android:singleLine="true"
					android:ellipsize="marquee"/>
			</LinearLayout>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/label_rv_tastescore"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1">
				<ImageView
					android:id="@+id/TasteScoreStar"
					android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
					android:layout_marginRight="6dip"
			    	android:src="@drawable/star_back"/>
			    <TextView
					android:id="@+id/TasteScore"
					android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
					android:layout_weight="1"
			        android:textColor="@color/header_color"
			        android:textSize="12sp"
					android:singleLine="true"
					android:ellipsize="marquee"/>
			</LinearLayout>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/label_rv_servicescore"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1">
				<ImageView
					android:id="@+id/ServiceScoreStar"
					android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
					android:layout_marginRight="6dip"
			    	android:src="@drawable/star_back"/>
			    <TextView
					android:id="@+id/ServiceScore"
					android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
					android:layout_weight="1"
			        android:textColor="@color/header_color"
			        android:textSize="12sp"
					android:singleLine="true"
					android:ellipsize="marquee"/>
			</LinearLayout>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/label_rv_moodscore"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1">
				<ImageView
					android:id="@+id/MoodScoreStar"
					android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
					android:layout_marginRight="6dip"
			    	android:src="@drawable/star_back"/>
			    <TextView
					android:id="@+id/MoodScore"
					android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
					android:layout_weight="1"
			        android:textColor="@color/header_color"
			        android:textSize="12sp"
					android:singleLine="true"
					android:ellipsize="marquee"/>
			</LinearLayout>
	</TableRow>

	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/label_rv_dinnerprice"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	   	<TextView
			android:id="@+id/DinnerPrice"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/header_color" />
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/label_rv_lunchprice"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	   	<TextView
			android:id="@+id/LunchPrice"
	        android:textSize="12sp"
			android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/header_color" />
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:id="@+id/Title"
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="12sp"
		    android:textColor="@color/header_color"
			android:layout_span="2" />
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:id="@+id/Comment"
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="12sp"
    		android:textColor="@color/header_color"
			android:layout_span="2" />
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:id="@+id/text_review_more"
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:text="@string/button_review_more"
		    android:textSize="10sp"
		   	android:layout_gravity="right"
   		    android:textColor="@color/text3_color"
			android:layout_span="2" />
	</TableRow>
</TableLayout>